# orb

./: .gitignore  .gitmodules  CMakeLists.txt  Interface.sln  meson.build  readme.md
Core/: POA.cpp  POA_p.cpp  ProxyLocal.cpp  ProxyManager.cpp  ProxyObject.cpp  ServantBase.cpp  ServantMarshaler.cpp  ServantProxyBase.cpp  ServantProxyManager.cpp  TypeCode.cpp  system_exceptions.cpp  tc_constants.cpp  tc_exceptions.cpp  tc_impex.h
CoreImport/: Any.cpp  POA.cpp  TypeCode.cpp  g_ORB.cpp  g_object_factory.cpp  meson.build  object_factory.cpp  orb.cpp  tc_TypeCode.cpp  tc_constants.cpp  tc_exceptions.cpp
HandMade/: IOReference.h  IORequest.h  Marshal.h  MarshalContext.h  Marshal_s.h  Unmarshal.h  Unmarshal_s.h
Include/: AbstractBase.h  AbstractBase_c.h  AbstractBase_s.h  BasicTypes.h  DynamicServant_c.h  Environment.h  Exception.h  Implementation.h  ImplementationPOA.h  ImplementationStatic.h  ImplementationTied.h  Interface.h  Interface_c.h  Interface_s.h  LocalObject_c.h  ORB.h  Object.h  ObjectAdapter.h  ObjectAdapter_c.h  ObjectAdapter_s.h  ObjectFactory_c.h  ObjectFactory_s.h  Object_c.h  Object_s.h  POA_c.h  POA_s.h  PortableServer.h  RefCount.h  RefCountBase.h  RepositoryId.h  Servant.h  (+8 more)
Include/CORBA/: 2base.h  ABI.h  ABI_Any.h  ABI_Interface.h  ABI_Sequence.h  ABI_String.h  ABI_forward.h  AMI.idl  AbstractBase.h  AbstractBase.inl  AbstractBaseImpl.h  AbstractBasePOA.h  AbstractBaseStatic.h  AbstractBaseVal.h  AbstractBase_c.h  AbstractBase_s.h  Alias.h  Any.h  AnyABI.h  BasicTypes.h  BiDirPolicy.idl  Binder_c.h  Binder_s.h  Boolean.h  Bridge.h  CCMObjectImpl.h  CDR.h  CMakeLists.txt  CORBA.h  CORBA_Environment.h  CORBA_Stream.idl  CORBA_types.idl  Client.h  Components.idl  Context.idl  CosEventChannelAdmin.idl  CosEventComm.idl  CosLwLogAdministrator.idl  CosLwLogConsumer.idl  CosLwLogProducer.idl  (+279 more)
Include/CORBA/Proxy/: IOReference.h  IOReference.idl  IOReference_s.h  IORequest.h  IORequest.idl  IORequest_s.h  InterfaceMetadata.h  Marshal.h  MarshalContext.h  MarshalTraits.h  MarshalTraits_any.h  MarshalTraits_forward.h  MarshalTraits_sequence.h  MarshalTraits_string.h  Marshal_s.h  OperationIndex.h  PlatformMarshal.h  PlatformMarshalContext.h  PlatformObjRef.h  PlatformProxyBase.h  PlatformRequest.h  PlatformUnmarshal.h  PollerBase.h  Proxy.h  ProxyBase.h  ProxyBaseInterface.h  ProxyFactory.h  ProxyFactory.idl  ProxyFactory_s.h  ProxyHolder.h  RqProcWrapper.h  TC_Object.h  TC_TypeCode.h  TypeAlias.h  TypeCodeArray.h  TypeCodeBasic.h  TypeCodeEnum.h  TypeCodeException.h  TypeCodeFixed.h  TypeCodeImpl.h  (+20 more)
Include/CORBA/ccm/: CCM_Cookie.idl  CCM_Events.idl  CCM_Home.idl  CCM_Navigation.idl  CCM_Object.idl  CCM_Receptacle.idl
Source/: 2base.cpp  ABI.cpp  AbstractBase.cpp  AbstractBase_c.cpp  AbstractBase_s.cpp  Any.cpp  Binder_c.cpp  CCMObjectImpl.cpp  CMakeLists.txt  CORBA_EnvironmentServant.cpp  CORBA_EnvironmentServant.h  DynamicServant.cpp  DynamicServant_c.cpp  Environment.cpp  EnvironmentBase.cpp  EnvironmentImpl.cpp  Environment_c.cpp  Exception.cpp  ExceptionHolder.cpp  FindInterface.cpp  Fixed.cpp  Implementation.cpp  ImplementationPOA.cpp  ImplementationTied.cpp  Interface.cpp  Interface_c.cpp  Interface_s.cpp  LifeCycleNone.cpp  LifeCycleRefCntLink.cpp  LifeCycleServant.cpp  LocalObject.cpp  LocalObjectLink.cpp  LocalObjectPOA.cpp  LocalObject_c.cpp  MarshalTraits_any.cpp  NoDefaultPOA.cpp  ORB.cpp  Object.cpp  ObjectAdapter_c.cpp  ObjectFactory.cpp  (+53 more)
Source/Windows/: ORB.vcxproj  ORB.vcxproj.filters
Source/msvs/: ORB.vcxproj  ORB.vcxproj.filters  cpp.hint
Test/: Binder.cpp  Binder.h  CMakeLists.txt  DynamicI1.h  DynamicI3.h  I1.cpp  I1.h  I1_dynamic.cpp  I1_dynamic.h  I1_portable.cpp  I1_portable.h  I1_static.cpp  I1_static.h  I1_tied.cpp  I1_tied.h  I3.cpp  I3.h  I3_dynamic.cpp  I3_dynamic.h  I3_portable.cpp  I3_portable.h  I3_static.cpp  I3_static.h  I3_tied.cpp  I3_tied.h  ImplI1.cpp  ImplI1.h  Loader.cpp  Loader.h  LocalObjectCore.h  LocalObjectStaticCore.h  MockBinder.cpp  MockBinder.h  MockPOA.h  ObjectAdapterCore.cpp  ObjectAdapterCore.h  ObjectCore.h  ObjectFactoryCore.cpp  ObjectFactoryCore.h  ObjectImpl.cpp  (+45 more)
Test/Core/: AtomicCounter.h  CoreInterface.h  Current.cpp  FreeSyncContext.cpp  FreeSyncDomain.cpp  LifeCycle.h  Loader.cpp  Loader.h  Runnable.h  StaticObject.h  SynchronizationContext.h  Synchronized.h
Test/Core/ORB/: GarbageCollector.h  LocalObject.h  ObjectFactory.cpp  ObjectFactory.h  ObjectImpl.h  POA.cpp  POA.h  ProxyBase.h  ProxyLocal.h  ProxyManager.cpp  ProxyManager.h  ProxyObject.cpp  ProxyObject.h  RootPOA.cpp  RootPOA.h  ServantBase.cpp  ServantBase.h
Test/Mock/: Current.cpp  MockBinder.cpp  MockBinder.h  MockPOA.h  ObjectFactory.h  SynchronizationContext.cpp
Test/Mock/Core/: FreeSyncContext.cpp
Test/Mock/Core/ORB/: LocalObject.h  ObjectFactory.h  ProxyBase.h
Test/Windows/: Test.sln  Test.vcxproj  Test.vcxproj.filters
Test/msvs/: Test.vcxproj  Test.vcxproj.filters  TestORB.sln  TestORB.vcxproj  TestORB.vcxproj.filters
(+36 files in other folders)
