orb_src = files(
	'AMI.cpp',
	'Any.cpp',
	'CORBA_Stream.cpp',
	'CosEventChannelAdmin.cpp',
	'CosEventComm.cpp',
	'CosLwLogAdministrator.cpp',
	'CosLwLogConsumer.cpp',
	'CosLwLogProducer.cpp',
	'CosLwLogService.cpp',
	'CosLwLogStatus.cpp',
	'CosNaming.cpp',
	'CosTime.cpp',
	'CosTimerEvent.cpp',
	'CosTypedEventChannelAdmin.cpp',
	'CosTypedEventComm.cpp',
	'Current.cpp',
	'DomainManager.cpp',
	'Dynamic.cpp',
	'EnvironmentImpl.cpp',
	'Exception.cpp',
	'ExceptionHolder.cpp',
	'FindInterface.cpp',
	'FT.cpp',
	'Interface.cpp',
	'InterfaceRepository.cpp',
	'IOP.cpp',
	'LifeCycleNone.cpp',
	'local_core.cpp',
	'LocalObjectLink.cpp',
	'LocalObjectPOA.cpp',
	'Messaging.cpp',
	'NirvanaDGC.cpp',
	'NoDefaultPOA.cpp',
	'NVList.cpp',
	'ORB.cpp',
	'Policy.cpp',
	'Pollable.cpp',
	'PollerBase.cpp',
	'PortableServer.cpp',
	'ProxyBase.cpp',
	'RefCountLink.cpp',
	'RepId.cpp',
	'RqProcWrapper.cpp',
	'servant_core.cpp',
	'ServantBaseLink.cpp',
	'ServantBasePOA.cpp',
	'ServantImpl.cpp',
	'ServantLocator_native.cpp',
	'ServantStatic.cpp',
	'set_exception.cpp',
	'String_compat.cpp',
	'SystemException.cpp',
	'Type_fixed.cpp',
	'TypeCode.cpp',
	'TypeCodeImpl.cpp',
	'UnknownUserException.cpp',
	'ValueImpl.cpp')