orb_src = files(
	'Any.cpp',
	'EnvironmentImpl.cpp',
	'Exception.cpp',
	'ExceptionHolder.cpp',
	'FindInterface.cpp',
	'Interface.cpp',
	'LifeCycleNone.cpp',
	'local_core.cpp',
	'LocalObjectLink.cpp',
	'LocalObjectPOA.cpp',
	'NoDefaultPOA.cpp',
	'PollerBase.cpp',
	'ProxyBase.cpp',
	'RefCountLink.cpp',
	'RepId.cpp',
	'RqProcWrapper.cpp',
	'servant_core.cpp',
	'ServantBaseLink.cpp',
	'ServantBasePOA.cpp',
	'ServantImpl.cpp',
	'ServantLocator_native.cpp',
	'ServantStatic.cpp',
	'set_exception.cpp',
	'String_compat.cpp',
	'SystemException.cpp',
	'Type_fixed.cpp',
	'TypeCodeImpl.cpp',
	'UnknownUserException.cpp',
	'ValueImpl.cpp')