orb_sources += idl.process('AMI.idl', extra_args: '-no_ami')

orb_sources += idl.process(
	'Context.idl',
	'CORBA_Stream.idl',
	'CosEventChannelAdmin.idl',
	'CosEventComm.idl',
	'CosLwLogAdministrator.idl',
	'CosLwLogConsumer.idl',
	'CosLwLogProducer.idl',
	'CosLwLogService.idl',
	'CosLwLogStatus.idl',
	'CosNaming.idl',
	'CosTime.idl',
	'CosTimerEvent.idl',
	'CosTypedEventChannelAdmin.idl',
	'CosTypedEventComm.idl',
	'Current.idl',
	'DomainManager.idl',
	'Dynamic.idl',
	'DynamicServant.idl',
	'FT.idl',
	'InterfaceRepository.idl',
	'IOP.idl',
	'IORequest.idl',
	'Messaging.idl',
	'NirvanaDGC.idl',
	'NVList.idl',
	'ORB.idl',
	'Policy.idl',
	'Pollable.idl',
	'PortableServer.idl',
	'RefCnt.idl',
	'Request.idl',
	'TCKind.idl',
	'TimeBase.idl',
	'TypeCode.idl'
	)

orb_sources += idl.process(
	'ObjectFactory.idl',
	extra_args: '-client')