orb_idl_no_ami = files (
	'AMI.idl'
	)

orb_idl_hdr_only = files (
	'Context.idl',
	'DynamicServant.idl',
	'IORequest.idl',
	'NVList.idl',
	'ObjectFactory.idl',
	'RefCnt.idl',
	'Request.idl'
	)

orb_idl = files (
	'CORBA_Stream.idl',
	'CosEventChannelAdmin.idl',
	'CosEventComm.idl',
	'CosLwLogAdministrator.idl',
	'CosLwLogConsumer.idl',
	'CosLwLogProducer.idl',
	'CosLwLogService.idl',
	'CosLwLogStatus.idl',
	'CosNaming.idl',
	'CosTime.idl',
	'CosTimerEvent.idl',
	'CosTypedEventChannelAdmin.idl',
	'CosTypedEventComm.idl',
	'Current.idl',
	'DomainManager.idl',
	'Dynamic.idl',
	'FT.idl',
	'InterfaceRepository.idl',
	'IOP.idl',
	'Messaging.idl',
	'NirvanaDGC.idl',
	'ORB.idl',
	'Policy.idl',
	'Pollable.idl',
	'PortableServer.idl',
	'TCKind.idl',
	'TimeBase.idl',
	'TypeCode.idl'
	)
